--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   firebase_auth: ^4.3.0
   firebase_core: ^2.8.0
   shared_preferences: ^2.0.18
+  cloud_firestore: ^4.4.5
 
 dev_dependencies: 
   flutter_lints: ^2.0.0
