--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   firebase_core: ^2.8.0
   shared_preferences: ^2.0.18
   cloud_firestore: ^4.4.5
+  intl: ^0.17.0
 
 dev_dependencies: 
   flutter_lints: ^2.0.0
